# aoc

./: README.md  cli.py  requirements.txt
go/: genday.sh
go/2015/day01/: go.mod  main.go  main_test.go
go/2015/day02/: README.md  go.mod  main.go  main_test.go
go/template/day{{'%02d'|format(cookiecutter.day|int)}}/: go.mod  main.go  main_test.go
java/2015/day01/: README.md  pom.xml
java/template/day{{'%02d'|format(cookiecutter.day|int)}}/: pom.xml
python/: genday.sh
python/2015/: .gitignore  pyproject.toml
python/2015/day01/: main.py  test.py
python/2015/day02/: main.py  test.py
python/2022/day15/: README.md  main.py  test.py
python/2022/day16/: main.py  test.py
python/2022/utils/: point.py  size.py
python/2023/: README.md
python/2023/day01/: README.md  main.py  test.py
python/2023/day02/: README.md  main.py  test.py
python/2023/day03/: main.py  test.py
python/2024/: README.md
python/2024/day01/: main.py  test.py
python/2024/day02/: README.md  main.py  test.py
python/2024/day03/: README.md  main.py  test.py
python/2024/day04/: README.md  main.py  test.py
python/2024/day05/: README.md  main.py  test.py
python/2024/day06/: README.md  debug.py  main.py  test.py
python/template/day{{'%02d'|format(cookiecutter.day|int)}}/: pyproject.toml
python/template/day{{'%02d'|format(cookiecutter.day|int)}}/src/: main.py  test.py
rust/: .gitignore  genday.sh
rust/template/day{{'%02d'|format(cookiecutter.day|int)}}/: Cargo.toml
typescript/: genday.sh
typescript/2015/day01/: README.md  package.json  (+1 more)
zig/template/: cookiecutter.json
(+23 files in other folders)
